# TaskSys

./: .travis.yml  CMakeLists.txt  README.md
include/: task.hpp  task_queue.hpp
src/: task.cpp  task.hpp  task_queue.cpp  task_queue.hpp
test/: simulator.cpp  simulator.hpp  test.cpp
